--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             margin-left: 70%;
             margin-top: 350px;
             z-index: 1;
+            color: black;
+          }
+
+          a{
+            background-color: black;
+            text-decoration: none;
+            text-decoration-style: none;
           }
 
           .toggle-btn{
