--- a/page4.html
+++ b/page4.html
@@ -43,6 +43,30 @@
         {
           background-blend-mode: screen;
         }
+
+         @media only screen and (max-width: 800px){
+
+          .container{
+            display: none;
+          }
+
+          body{
+            background:none;
+            width: 100%;
+          }
+
+          a{
+            position: absolute;
+            left: 0;
+            left: 50%;
+            top:30%;
+          }
+          .rec{
+            background-color: black;
+          }
+
+         }
+
     </style>
     <!-- font -->
     <link href="https://cdn.glitch.com/b70fcefb-87ef-447f-8834-be0fdc077845%2Fedosz.ttf?v=1574784061289" rel="stylesheet">
