--- a/page7.html
+++ b/page7.html
@@ -6,11 +6,42 @@
 		<title>Animated Image Pieces | Demo: Grid | Codrops</title>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo-grid.css" />
+		<link href="https://cdn.glitch.com/b70fcefb-87ef-447f-8834-be0fdc077845%2Fedosz.ttf?v=1574784061289" rel="stylesheet">
 		<script>document.documentElement.className = 'js';</script>
+
+		<style type="text/css">
+			h1{
+				display: none;
+			}
+
+			 @media only screen and (max-width: 800px){
+
+			 	h1{
+			 		display: block;
+			 		position: absolute;
+			 		left: 30%;
+			 		top: 30%;
+			 		right: 10%;
+			 		font-family: Edo SZ;
+			 	}
+
+			 	.rec{
+			 		background-color: black;
+			 	}
+
+			 	.content{
+			 		display: none;
+			 	}
+
+			 	img{
+			 		display: none;
+			 	}
+			 }
+		</style>
 	</head>
 	<body class="demo-grid loading">
 
-
+			<h1>So I will have to kill you first.</h1>
 			<img class="heart" src="assets/gheart.jpg">
 
 			<a href="page8.html"><div class="rec"></div></a>
