--- a/index.html
+++ b/index.html
@@ -23,13 +23,6 @@
             margin-left: 70%;
             margin-top: 350px;
             z-index: 1;
-            color: black;
-          }
-
-          a{
-            background-color: black;
-            text-decoration: none;
-            text-decoration-style: none;
           }
 
           .toggle-btn{
@@ -77,6 +70,35 @@
           {
             background-blend-mode: screen;
           }
+
+          @media only screen and (max-width: 800px){
+
+          	.toggle-btn{
+          		display: none;
+          	}
+
+          	.menu{
+          		display: none;
+          	}
+          	.container{
+          		display: none;
+          	}
+
+          	a{
+          		position: absolute;
+          		left: 30%;
+          		top: 0%;
+          	}
+
+          	h1{
+          		width: 10em;
+          		left: 0;
+          		top: 0;
+          	}
+
+          }
+
+
 
 
     </style>
