--- a/page1.html
+++ b/page1.html
@@ -54,6 +54,15 @@
         background-color:white;
       }
 
+       @media only screen and (max-width: 800px){
+
+          .next{
+            background-color: white;
+          }
+
+
+       }
+
 
     </style>
   </head>  
