--- a/page6.html
+++ b/page6.html
@@ -14,15 +14,48 @@
     width: 100%;
     height: 100vh;
     background: #fff;
-}
+    }
 
-div {
-   position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
+    .dt {
+       position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+    }
+
+    .ph{
+        display: none;
+    }
+
+     @media only screen and (max-width: 800px){
+
+        body{
+            height: 100vh;
+        }
+
+        .dt{
+            display: none;
+        }
+
+        .ph{
+            display: block;
+        }
+        a{
+            width:90%;
+            position: absolute;
+            left: 6%;
+            top: 40%;
+            text-decoration: none;
+        }
+        h1{
+            color: black;
+            font-family: Edo SZ;
+        }
+
+     }
+
+
 
     </style>
     <link href="https://cdn.glitch.com/b70fcefb-87ef-447f-8834-be0fdc077845%2Fedosz.ttf?v=1574784061289" rel="stylesheet">
@@ -30,7 +63,9 @@ div {
 </head>
 <body>
 
-    <a href="page7.html"><div id="main"></div></a>
+    
+    <a class="ph" href="page7.html"><h1>I am yours. you are mine, there’s nothing I WOULDN’T do to make you smile.</h1></a>
+    <a class="dt"href="page7.html"><div id="main"></div></a>
 
 <script>
 
