--- a/page9.html
+++ b/page9.html
@@ -14,22 +14,28 @@
     width: 100%;
     height: 100vh;
     background: #000;
-}
+    }
 
-div {
-	width: 5em;
-	height: 5em;
-	background-color: black;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
+    div {
+    	width: 5em;
+    	height: 5em;
+    	background-color: black;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+    }
 
-div:hover{
-	background-color: white;
-}
+    div:hover{
+    	background-color: white;
+    }
+
+    @media only screen and (max-width: 800px){
+      div{
+        background-color: white;
+      }
+    }
     </style>
     <link href="https://cdn.glitch.com/b70fcefb-87ef-447f-8834-be0fdc077845%2Fedosz.ttf?v=1574784061289" rel="stylesheet">
 
